--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,14 @@
   cursor: pointer;
 }
 
+.hover:hover {
+  outline: 0px solid transparent;
+  padding-bottom: 3px;
+  border-bottom: 3px solid #CCABCD;
+  -webkit-transition: all 0.8s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
 li {
   list-style: none;
 }
@@ -156,4 +164,12 @@ body {
 
 .links-categories {
   letter-spacing: 3px;
+}
+
+/* ProductCards Section */
+
+.product_cards--card {
+  height: 50px;
+  width: 50px;
+  border: 3px solid black;
 }
