--- a/src/style.css
+++ b/src/style.css
@@ -227,14 +227,15 @@ body {
   align-self: center;
 }
 
-.product_cards--button {
+.cart_button {
   background-color: rgba(51, 51, 51, 0.05);
   border-width: 0;
   color: #333333;
   cursor: pointer;
   display: inline-block;
+  font-family: 'Alata';
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 900;
   line-height: 20px;
   list-style: none;
   margin: 0;
@@ -246,9 +247,44 @@ body {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  /* border-radius: 8px; */
 }
 
-.product_cards--button:hover {
+.cart_button:hover {
   background-color: rgb(204, 171, 205);
+}
+
+/* ProductPage Section */
+
+.product_page--container {
+  display: grid;
+  gap: 2rem;
+  height: 100vh;
+}
+
+.product_page--image {
+  display: grid;
+  place-self: center;
+  padding: 2rem;
+  height: 500px;
+  width: 500px;
+}
+
+.product_page--details {
+  display: grid;
+  gap: 1rem;
+  place-items: center;
+  padding: 2rem;
+}
+
+.product_page--title {
+  font-size: 2.2rem;
+  width: 90%;
+}
+
+.product_page--button {
+  height: 3.2rem;
+  width: 70%;
+  margin: auto;
+  border-radius: 5px;
+  font-size: 1.2rem;
 }
