--- a/src/style.css
+++ b/src/style.css
@@ -277,6 +277,7 @@ body {
 }
 
 .product_page--title {
+  text-align: center;
   font-size: 2.2rem;
   width: 90%;
 }
@@ -287,4 +288,44 @@ body {
   margin: auto;
   border-radius: 5px;
   font-size: 1.2rem;
+}
+
+/* CartModal Section */
+
+.modal {
+  position: fixed;
+  right: -100%;
+  top: 0;
+  bottom: 0;
+  background-color: salmon;
+  /* opacity: 40%;  */
+  z-index: 9999;
+  transition: right 0.3s ease-out;
+}
+
+.modal.show {
+  right: 0;
+}
+
+.modal--content {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 300px;
+  background-color: cornflowerblue;
+  padding: 20px;
+
+  display: grid;
+}
+
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  padding: 10px;
+  font-size: 2rem;
+  margin-right: 10px;
+  background-color: transparent;
 }
