User able to delete or keep item in cart.

--- a/src/style.css
+++ b/src/style.css
@@ -32,23 +32,26 @@
   background-color: red;
 }
 
-.edit_quantity {
+.edit_quantity_button {
   width: 20px;
   height: 20px;
+  font-size: 35px;
 }
 
-.quantity_input {
+.edit_quantity_button:hover {
+  scale: 1.2;
+  outline: 0px solid transparent;
+  transition: all .05s ease-in-out;
+  -webkit-transition: all 0.05s ease-in-out;
+}
+
+.item_quantity {
   width: 30px;
   border: none;
+  font-size: 22px;
   text-align: center;
   background-color: inherit;
   border-bottom: 1px solid gray;
-  /* margin: auto; */
-}
-
-.quantity_label {
-  display: grid;
-  /* margin: auto; */
 }
 
 .button_hover:hover {
@@ -58,20 +61,25 @@
   -webkit-transition: all 0.05s ease-in-out;
 }
 
-.edit_quantity_button {
-  background: transparent;
+.delete_button,
+.keep_item_button {
   border: none;
-  font-size: 30px;
+  padding: 5px;
   cursor: pointer;
-}
-
-.delete_button {
-  border: none;
-  padding: 3px;
-  cursor: pointer;
+  font-size: 20px;
   border-radius: 3px;
   background-color: inherit;
   border: 2px solid black;
+}
+
+.delete_button {
+  margin-bottom: 10px;
+}
+
+button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 li, a {
@@ -82,30 +90,31 @@ li, a {
 body {
   height: 100vh;
   width: 100vw;
-  /* font-family: 'Lato'; */
   font-family: 'Alata', sans-serif;
 }
 
 /* Navbar Section */
 
 .navbar--container {
+  height: 14vh;
   display: grid;
   margin-bottom: 6rem;
   grid-template-columns: 1fr 1fr;
-  height: 14vh;
+  background-color: white;
 }
 
 .navbar--left {
   display: grid;
-  align-items: center;
   padding-left: 50px;
+  align-items: center;
 }
 
 .navbar--right {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   align-items: center;
   justify-items: center;
+  grid-template-columns: repeat(3, 1fr);
+
 }
 
 .navbar--main_logo {
@@ -125,15 +134,14 @@ body {
 /* HomePage Section */
 
 .homepage--container {
-  height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
-
-  background-image: url('../public/background-image.jpeg');
+  height: 100vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  grid-template-rows: repeat(3, 1fr);
+  background-image: url('../public/background.jpeg');
 }
 
 /* ShopNowButton Section */
@@ -229,19 +237,19 @@ body {
 /* ProductCards Section */
 
 .product_cards--container {
-  display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(3, 1fr);
+  display: grid;
   padding: 1rem;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .product_cards--card {
-  height: 300px;
   width: 300px;
+  height: 350px;
   display: grid;
-  /* place-content: center; */
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   border-radius: 5px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .product_cards--a-link {
@@ -255,19 +263,20 @@ body {
 }
 
 .product_cards--description {
-  display: grid;
   gap: 12px;
+  width: 300px;
+  height: 100px;
+  display: grid;
   padding: 0.7rem;
   place-items: center;
-  height: 100px;
-  width: 300px;
 }
 
 .product_cards--title {
   display: grid;
-  align-self: flex-start;
+  font-size: 1.1rem;
+  letter-spacing: .7px;
   text-align: center;
-  font-size: 0.9rem;
+  align-self: flex-start;
 }
 
 .product_cards--price {
@@ -346,6 +355,7 @@ body {
   z-index: 9999;
   position: fixed;
   transition: right 0.3s ease-out;
+  height: 100vh;
 }
 
 .modal.show {
@@ -353,17 +363,17 @@ body {
 }
 
 .modal--content {
-  position: absolute;
-  right: 0;
   top: 0;
+  right: 0;
   bottom: 0;
   width: 300px;
-  border-left: 3px solid black;
+  height: 100%;
   padding: 20px;
-
-  /* display: grid; */
+  overflow: scroll;
+  position: absolute;
+  backdrop-filter: blur(25px);
+  /* border-left: 3px solid black; */
   background-color: rgba(255, 255, 255, .65);
-  backdrop-filter: blur(15px);
 }
 
 .close-button {
@@ -381,14 +391,17 @@ body {
   margin-top: 40px;
 }
 
-.cart_modal--footer {
+.check_out_button {
+  margin-top: 12px;
+  font-size: 1.3rem;
+  border-bottom: 2px solid gray;
 }
 
 /* ModalProductCard Section */
 
 .modal_product_card--container {
   display: grid;
-  height: 200px;
+  height: 300px;
   padding: 0.6rem;
   border-radius: 3px;
   margin-bottom: 20px;
@@ -421,4 +434,3 @@ body {
   grid-column: 1/ 3;
   text-align: center;
 }
-
